# x64dbg

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  Java Blackbook  Java Oracle book  LICENSE  README  README.md  README_zh-CN.md  README_zh.md  appveyor.yml  build.bat  build_coverity.bat  build_debug.bat  build_x32.bat  build_x64.bat  clean.bat  clean.cmd  cmake.toml  coverity_setenv.bat  debugger.cpp  doxyfile  forewinds  format.bat  formatted.txt  formatting_regexes.txt  git add  install.bat  k_appendLL.cpp  maketranslatetemplate.bat  preethamohan.md  readme.txt  release.bat  (+17 more)
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/.well-known/: funding-manifest-urls
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/format/: AStyleHelper.exe.config  install-git-hook.bat  pre-commit
.github/workflows/: build.yml  gitee.yml
cmake/: FindQt5.cmake  ParallelCompilation.cmake  Qt5Helpers.cmake  VSFlags.cmake  VSToolchain.cmake  cmkr.cmake  deps.cmake  init-submodules.cmake  llvm-mingw.cmake  qt-cross.cmake  release.cmake
docs/: .editorconfig  .gitignore  .readthedocs.yaml  README.md  conf.py  hacks.css  index.rst  make.bat  makechm.bat  requirements.txt  theme.js
docs/commands/: index.rst
docs/developers/: index.rst  tracefile.md
docs/gui/: index.rst  tips.rst  translations.rst  unusualinst.rst
docs/introduction/: Commandline.md  ConditionalBreakpoint.md  ConditionalTracing.md  Expression-functions.md  Expressions.md  Feature-set.md  Formatting.md  Glossary.md  Inability.md  Input.md  Values.md  Variables.md  index.rst
docs/licenses/: LICENSE.md  asmjitlicense.md  gleebuglicense.md  index.rst  janssonlicense.md  lz4license.md  titanlicense.md  x64dbglicense.md  xedparselicense.md  zydislicense.md
help/: AttachDebugger_attach.htm  Breakpoints.htm  Calculations.htm  Callbacks.htm  Commands.htm  Data.htm  DebugContinue_con.htm  Debug_Control.htm  DeleteBPX_bpc_bc.htm  DeleteHardwareBreakpoint_bphc_bphwc.htm  DeleteMemoryBPX_membpc_bpmc.htm  DetachDebugger_detach.htm  DisableBPX_bpd_bd.htm  DisableHardwareBreakpoint_bphd_bphwd.htm  DisableMemoryBreakpoint_membpd_bpmd.htm  EnableBPX_bpe_be.htm  EnableHardwareBreakpoint_bphe_bphwe.htm  EnableMemoryBreakpoint_membpe_bpme.htm  Exports.htm  Fill_memset.htm  General_Purpose.htm  HideDebugger_dbh_hide.htm  Hotkeys.htm  InitDebug_initdbg_init.htm  Input.htm  Introduction.htm  Jxx_IFxx.htm  LibrarianRemoveBreakPoint_bcdll.htm  LibrarianSetBreakPoint_bpdll.htm  Memory_Operations.htm  Misc.htm  PLUGINIT_STRUCT.htm  PLUG_SETUPSTRUCT.htm  Plugins.htm  Plugins_section.htm  README.md  Script_Commands.htm  Scripting.htm  SetBPXOptions_bptype.htm  SetBPX_bp_bpx.htm  (+136 more)
help/template/: fixedtop.htm  winchm_template_style.css
hooks/: AStyle.dll.sig  AStyleHelper.exe.config  AStyleWhore.exe.config  AStyleWhore.exe.sig  README.md  pre-commit
snapshot_2016-11-02_01-41/: commithash.txt
snapshot_2016-11-02_01-41/pluginsdk/: _dbgfunctions.h  _plugin_types.h  _plugins.h  _scriptapi.h  _scriptapi_argument.h  _scriptapi_assembler.h  _scriptapi_bookmark.h  _scriptapi_comment.h  _scriptapi_debug.h  _scriptapi_flag.h  _scriptapi_function.h  _scriptapi_gui.h  _scriptapi_label.h  _scriptapi_memory.h  _scriptapi_misc.h  _scriptapi_module.h  _scriptapi_pattern.h  _scriptapi_register.h  _scriptapi_stack.h  _scriptapi_symbol.h  bridgegraph.h  bridgelist.h  bridgemain.h  x32bridge.lib  x32dbg.lib  x64bridge.lib  x64dbg.lib
snapshot_2016-11-02_01-41/release/: errordb.txt  exceptiondb.txt  mnemdb.json  ntstatusdb.txt  x64dbg.chm
src/: Makefile  Makefile.Debug  Makefile.Release  dbg_assert.h  dbg_types.h  types.h  x64dbg_translations.pro
src/cross/gui/: CMakeLists.txt  Configuration.cpp  Configuration.h  Qt.cmake  StringUtil.cpp
src/cross/minidump/: CMakeLists.txt  FileParser.cpp  FileParser.h  GotoDialog.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MiniDisassembly.cpp  MiniDisassembly.h  MiniDump.cpp  MiniDump.h  MiniHexDump.cpp  MiniHexDump.h  MiniMemoryMap.cpp  MiniMemoryMap.h  Navigation.h  REToolSync.cpp  REToolSync.h  main.cpp  udmp-parser.cc  udmp-parser.h  udmp-utils.h
src/cross/remote_server/: main.py  pyproject.toml
src/test/avx512/: CMakeLists.txt  avx512_x64.asm  avx512_x86.asm  main.c
src/zydis_wrapper/: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  ZydisExportConfig.h  zydis_wrapper.cpp  zydis_wrapper.h  zydis_wrapper.sln  zydis_wrapper.vcxproj  zydis_wrapper.vcxproj.filters
src/zydis_wrapper/Zydis/: .gitattributes  Zydis.h
x64_dbg_bridge/: Utf8Ini.h  _global.cpp  _global.h  bridgelist.h  bridgemain.cpp  bridgemain.h  simpleini.h  x64_dbg_bridge.cbp  x64_dbg_bridge.vcxproj  x64_dbg_bridge.vcxproj.filters
x64_dbg_crash/: x64_dbg_crash.cbp  x64_dbg_crash.cpp  x64_dbg_crash.h  x64_dbg_crash.vcxproj  x64_dbg_crash.vcxproj.filters
x64_dbg_dbg/: Analysis.cpp  Analysis.h  AnalysisPass.cpp  AnalysisPass.h  BasicBlock.cpp  BasicBlock.h  CodeFollowPass.cpp  CodeFollowPass.h  FunctionPass.cpp  FunctionPass.h  Int3CoagulatorPass.cpp  Int3CoagulatorPass.h  LinearPass.cpp  LinearPass.h  _dbgfunctions.cpp  _dbgfunctions.h  _exports.cpp  _exports.h  _global.cpp  _global.h  _plugin_types.h  _plugins.cpp  _plugins.h  _scriptapi.cpp  _scriptapi.h  _scriptapi_assembler.cpp  _scriptapi_debug.cpp  _scriptapi_debug.h  _scriptapi_gui.cpp  _scriptapi_gui.h  _scriptapi_memory.cpp  _scriptapi_memory.h  _scriptapi_misc.cpp  _scriptapi_misc.h  _scriptapi_module.cpp  _scriptapi_module.h  _scriptapi_pattern.cpp  _scriptapi_pattern.h  _scriptapi_register.cpp  _scriptapi_register.h  (+113 more)
x64_dbg_exe/: app.manifest  crashdump.cpp  manifest.xml  resource.h  resource.rc  x64_dbg_exe.cbp  x64_dbg_exe.cpp  x64_dbg_exe.vcxproj  x64_dbg_exe.vcxproj.filters
x64_dbg_gui/: Disassembly.pptx  UML.vsd
x64_dbg_lang/: x64de.qm  x64de.qph  x64lang.ts
x64_dbg_launcher/: x64_dbg_launcher.cpp  x64_dbg_launcher.vcxproj  x64_dbg_launcher.vcxproj.filters
(+2498 files in other folders)
